--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@ Oh, my soul
       -->
 
       <section class="section achievement" id="Gallery" aria-label="achievement">
-
+<div class="container">
           <p class="section-subtitle">Gallery</p>
 
  <!-- Swiper -->
@@ -836,6 +836,7 @@ Oh, my soul
     
     </div>
     </div>
+  </div>
       </section>
 </div
 
