--- a/index.html
+++ b/index.html
@@ -772,10 +772,10 @@ Oh, my soul
  <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-      <img src="./assets/images/gallery/11.jpg" alt="">
+      <img src="./assets/images/gallery/11.jpg" alt="test">
       </div>
       <div class="swiper-slide">
-        <img src="./assets/images/gallery/12.jpg" alt="">
+        <img src="./assets/images/gallery/12.jpg" alt="test">
       </div>
       <div class="swiper-slide">
         <img src="./assets/images/gallery/13.jpg" alt="">
@@ -784,7 +784,7 @@ Oh, my soul
         <img src="./assets/images/gallery/14.jpg" alt="">
       </div>
       <div class="swiper-slide">
-        <img src="./assets/images/gallery/15.jpg" alt="">
+        <img src="./assets/images/gallery/15.jpg" alt="test">
       </div>
       <div class="swiper-slide">
         <img src="./assets/images/gallery/16.jpg" alt="">
